@@ -9,6 +9,7 @@
 - Changed the space allocation algorithm for the edit control (now border gap does not depend
   on border size).
 - Renamed public method for prop::String from 'commit' to 'commit_value'.
+- Fixed bug that could cause improper window sizing in several cases.
 
 === 1.0.1 ===
 * Updated build scripts.
